package ports;

public interface ChatRespositoryFactory {
    ChatRepository create();
}
