package ports;

public interface Logger {
    void log(LoggingType type, String message);
}
