package ports;

public enum  LoggingType {
    WARN, TRACE, DEBUG, ERROR, INFO
}
