package ports;

public interface MessageEventDispatcherFactory {
    MessageEventDispatcher create();
}
