package presentation;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class MessagingAPIStarter {
    public static void main(String[] args) {
        SpringApplication.run(MessagingAPIStarter.class);
    }
}
