package presentation.frontend;

public class ChatCreationRequestBody {
    public String chatId;
}
