package presentation.frontend;

import java.util.UUID;

public class WriteMessageRepresentation {
    public UUID chatId;
    public String author;
    public String content;
}
