@startuml

title __MESSAGING-API's Class Diagram__\n

  namespace application {
    interface application.MessagingAPI {
    }
  }
  

  namespace application {
    class application.MessagingAPIFactory {
    }
  }
  

  namespace application {
    class application.ReadMessage {
    }
  }
  

  namespace application {
    class application.StandardMessagingAPI {
    }
  }
  

  namespace application {
    class application.WriteMessage {
    }
  }
  

  namespace application {
    class application.WriteMessageBuilder {
    }
  }
  

  namespace domain {
    class domain.Author {
    }
  }
  

  namespace domain {
    class domain.Chat {
    }
  }
  

  namespace domain {
    class domain.ChatMessage {
    }
  }
  

  namespace domain {
    class domain.NewMessageReceived {
    }
  }
  

  namespace domain {
    class domain.User {
    }
  }
  

  namespace domain {
    class domain.UserAddedToChat {
    }
  }
  

  namespace infrastructure {
    class infrastructure.ConsoleInfoLogger {
    }
  }
  

  namespace infrastructure {
    class infrastructure.local.InMemoryChatRepository {
    }
  }
  

  namespace infrastructure {
    class infrastructure.local.LocalChatRepositoryFactory {
    }
  }
  

  namespace infrastructure {
    class infrastructure.local.LocalMessageEventDispatcher {
    }
  }
  

  namespace infrastructure {
    class infrastructure.local.LocalMessageEventDispatcherFactory {
    }
  }
  

  namespace infrastructure {
    class infrastructure.LoggerFactory {
    }
  }
  

  namespace ports {
    interface ports.ChatRepository {
    }
  }
  

  namespace ports {
    interface ports.ChatRespositoryFactory {
    }
  }
  

  namespace ports {
    interface ports.Logger {
    }
  }
  

  namespace ports {
    enum LoggingType {
    }
  }
  

  namespace ports {
    interface ports.MessageEventDispatcher {
    }
  }
  

  namespace ports {
    interface ports.MessageEventDispatcherFactory {
    }
  }
  

  namespace presentation {
    class presentation.MessagingAPIStarter {
    }
  }
  

  namespace presentation {
    namespace frontend {
      class presentation.frontend.ChatCreationRequestBody {
      }
    }
  }
  

  namespace presentation {
    namespace frontend {
      class presentation.MessagingAPIConfiguration {
      }
    }
  }
  

  namespace presentation {
    namespace frontend {
      class presentation.frontend.MessagingAPIController {
      }
    }
  }
  

  namespace presentation {
    namespace frontend {
      class presentation.frontend.UserConnectToChatRequestBody {
      }
    }
  }
  

  namespace presentation {
    namespace frontend {
      class presentation.frontend.WriteMessageRepresentation {
      }
    }
  }
  

  namespace presentation {
    namespace frontend {
      namespace websockets {
        class presentation.frontend.websockets.MessageRepresentation {
        }
      }
    }
  }
  

  namespace presentation {
    namespace frontend {
      namespace websockets {
        class presentation.frontend.websockets.MessageRepresentationDecoder {
        }
      }
    }
  }
  

  namespace presentation {
    namespace frontend {
      namespace websockets {
        class presentation.frontend.websockets.MessageRepresentationEncoder {
        }
      }
    }
  }
  

  namespace presentation {
    namespace frontend {
      namespace websockets {
        class presentation.frontend.websockets.MessagingSocket {
        }
      }
    }
  }
  

  namespace presentation {
    namespace frontend {
      namespace websockets {
        class presentation.frontend.websockets.SessionUserRegistry {
        }
      }
    }
  }
  

  namespace presentation {
    namespace frontend {
      namespace websockets {
        class presentation.frontend.websockets.UserSocketRegistry {
        }
      }
    }
  }
  

  application.StandardMessagingAPI .up.|> application.MessagingAPI
  application.StandardMessagingAPI o-- ports.MessageEventDispatcher : dispatcher
  application.StandardMessagingAPI o-- ports.ChatRepository : chatRepository
  application.StandardMessagingAPI o-- ports.Logger : logger
  domain.ChatMessage o-- domain.Author : author
  infrastructure.ConsoleInfoLogger .up.|> ports.Logger
  infrastructure.local.InMemoryChatRepository .up.|> ports.ChatRepository
  infrastructure.local.LocalChatRepositoryFactory .up.|> ports.ChatRespositoryFactory
  infrastructure.local.LocalMessageEventDispatcher .up.|> ports.MessageEventDispatcher
  infrastructure.local.LocalMessageEventDispatcherFactory .up.|> ports.MessageEventDispatcherFactory
  presentation.frontend.MessagingAPIController o-- application.MessagingAPI : messagingAPI
  presentation.frontend.websockets.MessageRepresentationDecoder .up.|> javax.websocket.Decoder.Text
  presentation.frontend.websockets.MessageRepresentationEncoder .up.|> javax.websocket.Encoder.Text
  presentation.frontend.websockets.MessagingSocket o-- ports.Logger : logger
  presentation.frontend.websockets.MessagingSocket o-- application.MessagingAPI : messagingAPI
  presentation.frontend.websockets.MessagingSocket o-- presentation.frontend.websockets.SessionUserRegistry : sessionUserRegistry
  presentation.frontend.websockets.MessagingSocket o-- presentation.frontend.websockets.UserSocketRegistry : userSocketRegistry


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
